@@ -44,8 +44,8 @@ module(load="omuxsock")
 # For each LOG frontend, set input & template
 {% for frontend in frontends -%}
 
-# Configuration of frontend {{ frontend.name }}
 {%- if frontend.enabled or frontend.listening_mode == "api" -%}
+# Configuration of frontend {{ frontend.name }}
 {%- if frontend.mode == "filebeat" %}
     input(type="imhiredis"
         Server="{{ frontend.redis_server }}"
